# eif

./: MANIFEST.in  pyproject.toml
Notebooks/: comparison_py_cxx.ipynb
eif/: __init__.py  _eif.pyx
src/eif/: _eif.pyx
