[build-system]
requires = [
  "hatchling",
  "hatch-cythonize",
  "numpy",
  "cython",
]
build-backend = "hatchling.build"

[project]
name = "eif"
version = "2.0.2"  # or whatever you use
description = "Extended Isolation Forest for anomaly detection"
readme = "README.md"
license-files = [ "License.txt" ]
requires-python = ">=3.7"
authors = [
  { name = "Matias Carrasco Kind", email = "mcarras2@illinois.edu" },
  { name = "Sahand Hariri" },
  { name = "Seng Keat Yeoh" },
]
dependencies = [
  "numpy",
  "cython",
]

[project.urls]
Homepage = "https://github.com/denix56/eif"

# Enable the Cython hook
[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cythonize"]

[tool.setuptools]
packages = ["eif"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
include_numpy = true
compile_py = false

compile_args = [
  "-std=c++11",
  "-Wcpp",
]
